[tool.poetry]
name = "survival_evaluation"
version = "0.1.0"
description = ""
authors = ["Humza Haider<humza@haiderstats.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
mypy = "^0.790"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = "C0114, C0115, C0116, C0330, R0801, R0902, C0103, W0613, W1203, fixme, not-callable"

[tool.pylint.format]
max_line_length = "88"
